--- a/style.css
+++ b/style.css
@@ -25,13 +25,12 @@ p{
     width: 90%;
     border-radius: 5px;
     color: dimgray;
-    background-color: ghostwhite;
+    
 }
 .half-width{
     width: 40%;
     float: left;
     margin-left: 5%;
-    position: relative;
 }
 
 .top-banner{
@@ -47,7 +46,7 @@ img{
     padding-left: 100px;
 }
 #My-image{
-    width: 100%;
+    width: 95%;
     padding-left: 0px;
 }
 .dream-banner{
@@ -59,11 +58,33 @@ img{
     color: orange;
 }
 .experience-area{
-    padding-top: 100px;
-    height: 500px;
-    padding-top: 530px; 
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.single-expreience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+    text-align: center;
+    padding-left: 35px;
+    background-color: ghostwhite;
+}
+#full-stack{
+    border-left:7px solid;
+    border-image: linear-gradient( red,orange,yellow);
+    border-image-slice: 1;
+   
+ 
+}
+#baby-web{
+    border-left:7px solid;
+    border-image: linear-gradient(blue,indigo,violet);
+    border-image-slice: 1;
+
 }
 footer{
-    font-size: 5px;
-    color: black;
+    font-size: 15px;
+    color: gray;
+    text-align: center;
 }
